seaqt/QtWidgets/gen_qheaderview.h

class QAbstractItemModel;
class QHeaderView;
class QMetaObject;
class QPoint;
class QSize;
typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QHeaderView QHeaderView;
typedef struct QMargins QMargins;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QWidget QWidget;
struct QHeaderView_VTable {
	void (*destructor)(struct QHeaderView_VTable* vtbl, QHeaderView* self);
	QMetaObject* (*metaObject)(struct QHeaderView_VTable* vtbl, const QHeaderView* self);
	void* (*metacast)(struct QHeaderView_VTable* vtbl, QHeaderView* self, const char* param1);
	int (*metacall)(struct QHeaderView_VTable* vtbl, QHeaderView* self, int param1, int param2, void** param3);
	void (*setModel)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QAbstractItemModel* model);
	QSize* (*sizeHint)(struct QHeaderView_VTable* vtbl, const QHeaderView* self);
	void (*setVisible)(struct QHeaderView_VTable* vtbl, QHeaderView* self, bool v);
	void (*doItemsLayout)(struct QHeaderView_VTable* vtbl, QHeaderView* self);
	void (*reset)(struct QHeaderView_VTable* vtbl, QHeaderView* self);
	void (*currentChanged)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QModelIndex* current, QModelIndex* old);
	bool (*event)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QEvent* e);
	void (*paintEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QPaintEvent* e);
	void (*mousePressEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QMouseEvent* e);
	void (*mouseMoveEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QMouseEvent* e);
	void (*mouseReleaseEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QMouseEvent* e);
	void (*mouseDoubleClickEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QMouseEvent* e);
	bool (*viewportEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QEvent* e);
	void (*paintSection)(struct QHeaderView_VTable* vtbl, const QHeaderView* self, QPainter* painter, QRect* rect, int logicalIndex);
	QSize* (*sectionSizeFromContents)(struct QHeaderView_VTable* vtbl, const QHeaderView* self, int logicalIndex);
	int (*horizontalOffset)(struct QHeaderView_VTable* vtbl, const QHeaderView* self);
	int (*verticalOffset)(struct QHeaderView_VTable* vtbl, const QHeaderView* self);
	void (*updateGeometries)(struct QHeaderView_VTable* vtbl, QHeaderView* self);
	void (*scrollContentsBy)(struct QHeaderView_VTable* vtbl, QHeaderView* self, int dx, int dy);
	void (*dataChanged)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QModelIndex* topLeft, QModelIndex* bottomRight, struct miqt_array /* of int */  roles);
	void (*rowsInserted)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QModelIndex* parent, int start, int end);
	QRect* (*visualRect)(struct QHeaderView_VTable* vtbl, const QHeaderView* self, QModelIndex* index);
	void (*scrollTo)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QModelIndex* index, int hint);
	QModelIndex* (*indexAt)(struct QHeaderView_VTable* vtbl, const QHeaderView* self, QPoint* p);
	bool (*isIndexHidden)(struct QHeaderView_VTable* vtbl, const QHeaderView* self, QModelIndex* index);
	QModelIndex* (*moveCursor)(struct QHeaderView_VTable* vtbl, QHeaderView* self, int param1, int param2);
	void (*setSelection)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QRect* rect, int flags);
	QRegion* (*visualRegionForSelection)(struct QHeaderView_VTable* vtbl, const QHeaderView* self, QItemSelection* selection);
	void (*setSelectionModel)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QItemSelectionModel* selectionModel);
	void (*keyboardSearch)(struct QHeaderView_VTable* vtbl, QHeaderView* self, struct miqt_string search);
	int (*sizeHintForRow)(struct QHeaderView_VTable* vtbl, const QHeaderView* self, int row);
	int (*sizeHintForColumn)(struct QHeaderView_VTable* vtbl, const QHeaderView* self, int column);
	QVariant* (*inputMethodQuery)(struct QHeaderView_VTable* vtbl, const QHeaderView* self, int query);
	void (*setRootIndex)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QModelIndex* index);
	void (*selectAll)(struct QHeaderView_VTable* vtbl, QHeaderView* self);
	void (*rowsAboutToBeRemoved)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QModelIndex* parent, int start, int end);
	void (*selectionChanged)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QItemSelection* selected, QItemSelection* deselected);
	void (*updateEditorData)(struct QHeaderView_VTable* vtbl, QHeaderView* self);
	void (*updateEditorGeometries)(struct QHeaderView_VTable* vtbl, QHeaderView* self);
	void (*verticalScrollbarAction)(struct QHeaderView_VTable* vtbl, QHeaderView* self, int action);
	void (*horizontalScrollbarAction)(struct QHeaderView_VTable* vtbl, QHeaderView* self, int action);
	void (*verticalScrollbarValueChanged)(struct QHeaderView_VTable* vtbl, QHeaderView* self, int value);
	void (*horizontalScrollbarValueChanged)(struct QHeaderView_VTable* vtbl, QHeaderView* self, int value);
	void (*closeEditor)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QWidget* editor, int hint);
	void (*commitData)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QWidget* editor);
	void (*editorDestroyed)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QObject* editor);
	struct miqt_array /* of QModelIndex* */  (*selectedIndexes)(struct QHeaderView_VTable* vtbl, const QHeaderView* self);
	bool (*edit2)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QModelIndex* index, int trigger, QEvent* event);
	int (*selectionCommand)(struct QHeaderView_VTable* vtbl, const QHeaderView* self, QModelIndex* index, QEvent* event);
	void (*startDrag)(struct QHeaderView_VTable* vtbl, QHeaderView* self, int supportedActions);
	QStyleOptionViewItem* (*viewOptions)(struct QHeaderView_VTable* vtbl, const QHeaderView* self);
	bool (*focusNextPrevChild)(struct QHeaderView_VTable* vtbl, QHeaderView* self, bool next);
	void (*dragEnterEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QDragEnterEvent* event);
	void (*dragMoveEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QDragMoveEvent* event);
	void (*dragLeaveEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QDragLeaveEvent* event);
	void (*dropEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QDropEvent* event);
	void (*focusInEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QFocusEvent* event);
	void (*focusOutEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QFocusEvent* event);
	void (*keyPressEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QKeyEvent* event);
	void (*resizeEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QResizeEvent* event);
	void (*timerEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QTimerEvent* event);
	void (*inputMethodEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QInputMethodEvent* event);
	bool (*eventFilter)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QObject* object, QEvent* event);
	QSize* (*viewportSizeHint)(struct QHeaderView_VTable* vtbl, const QHeaderView* self);
	QSize* (*minimumSizeHint)(struct QHeaderView_VTable* vtbl, const QHeaderView* self);
	void (*setupViewport)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QWidget* viewport);
	void (*wheelEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QWheelEvent* param1);
	void (*contextMenuEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QContextMenuEvent* param1);
	void (*changeEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QEvent* param1);
	int (*devType)(struct QHeaderView_VTable* vtbl, const QHeaderView* self);
	int (*heightForWidth)(struct QHeaderView_VTable* vtbl, const QHeaderView* self, int param1);
	bool (*hasHeightForWidth)(struct QHeaderView_VTable* vtbl, const QHeaderView* self);
	QPaintEngine* (*paintEngine)(struct QHeaderView_VTable* vtbl, const QHeaderView* self);
	void (*keyReleaseEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QKeyEvent* event);
	void (*enterEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QEvent* event);
	void (*leaveEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QEvent* event);
	void (*moveEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QMoveEvent* event);
	void (*closeEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QCloseEvent* event);
	void (*tabletEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QTabletEvent* event);
	void (*actionEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QActionEvent* event);
	void (*showEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QShowEvent* event);
	void (*hideEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QHideEvent* event);
	bool (*nativeEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, struct miqt_string eventType, void* message, long* result);
	int (*metric)(struct QHeaderView_VTable* vtbl, const QHeaderView* self, int param1);
	void (*initPainter)(struct QHeaderView_VTable* vtbl, const QHeaderView* self, QPainter* painter);
	QPaintDevice* (*redirected)(struct QHeaderView_VTable* vtbl, const QHeaderView* self, QPoint* offset);
	QPainter* (*sharedPainter)(struct QHeaderView_VTable* vtbl, const QHeaderView* self);
	void (*childEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QChildEvent* event);
	void (*customEvent)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QEvent* event);
	void (*connectNotify)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QMetaMethod* signal);
	void (*disconnectNotify)(struct QHeaderView_VTable* vtbl, QHeaderView* self, QMetaMethod* signal);
};
QHeaderView* QHeaderView_new(struct QHeaderView_VTable* vtbl, int orientation);
QHeaderView* QHeaderView_new2(struct QHeaderView_VTable* vtbl, int orientation, QWidget* parent);
void QHeaderView_connect_sectionMoved(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int, int, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionResized(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int, int, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionPressed(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionClicked(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionEntered(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionDoubleClicked(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionCountChanged(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionHandleDoubleClicked(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_connect_geometriesChanged(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
void QHeaderView_connect_sortIndicatorChanged(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QHeaderView_protectedbase_setHorizontalStepsPerItem(void* self, int steps);
int QHeaderView_protectedbase_horizontalStepsPerItem(const void* self);
void QHeaderView_protectedbase_setVerticalStepsPerItem(void* self, int steps);
int QHeaderView_protectedbase_verticalStepsPerItem(const void* self);
int QHeaderView_protectedbase_state(const void* self);
void QHeaderView_protectedbase_setState(void* self, int state);
void QHeaderView_protectedbase_scheduleDelayedItemsLayout(void* self);
void QHeaderView_protectedbase_executeDelayedItemsLayout(void* self);
void QHeaderView_protectedbase_setDirtyRegion(void* self, QRegion* region);
void QHeaderView_protectedbase_scrollDirtyRegion(void* self, int dx, int dy);
QPoint* QHeaderView_protectedbase_dirtyRegionOffset(const void* self);
void QHeaderView_protectedbase_startAutoScroll(void* self);
void QHeaderView_protectedbase_stopAutoScroll(void* self);
void QHeaderView_protectedbase_doAutoScroll(void* self);
int QHeaderView_protectedbase_dropIndicatorPosition(const void* self);
void QHeaderView_protectedbase_setViewportMargins(void* self, int left, int top, int right, int bottom);
QMargins* QHeaderView_protectedbase_viewportMargins(const void* self);
void QHeaderView_protectedbase_drawFrame(void* self, QPainter* param1);
void QHeaderView_protectedbase_updateMicroFocus(void* self);
void QHeaderView_protectedbase_create(void* self);
void QHeaderView_protectedbase_destroy(void* self);
bool QHeaderView_protectedbase_focusNextChild(void* self);
bool QHeaderView_protectedbase_focusPreviousChild(void* self);
QObject* QHeaderView_protectedbase_sender(const void* self);
int QHeaderView_protectedbase_senderSignalIndex(const void* self);
int QHeaderView_protectedbase_receivers(const void* self, const char* signal);
bool QHeaderView_protectedbase_isSignalConnected(const void* self, QMetaMethod* signal);
const QMetaObject* QHeaderView_staticMetaObject();
void QHeaderView_delete(QHeaderView* self);