seaqt/QtWidgets/gen_qheaderview.nim

proc fcQHeaderView_protectedbase_setHorizontalStepsPerItem(self: pointer, steps: cint): void {.importc: "QHeaderView_protectedbase_setHorizontalStepsPerItem".}
proc fcQHeaderView_protectedbase_horizontalStepsPerItem(self: pointer, ): cint {.importc: "QHeaderView_protectedbase_horizontalStepsPerItem".}
proc fcQHeaderView_protectedbase_setVerticalStepsPerItem(self: pointer, steps: cint): void {.importc: "QHeaderView_protectedbase_setVerticalStepsPerItem".}
proc fcQHeaderView_protectedbase_verticalStepsPerItem(self: pointer, ): cint {.importc: "QHeaderView_protectedbase_verticalStepsPerItem".}
proc fcQHeaderView_protectedbase_state(self: pointer, ): cint {.importc: "QHeaderView_protectedbase_state".}
proc fcQHeaderView_protectedbase_setState(self: pointer, state: cint): void {.importc: "QHeaderView_protectedbase_setState".}
proc fcQHeaderView_protectedbase_scheduleDelayedItemsLayout(self: pointer, ): void {.importc: "QHeaderView_protectedbase_scheduleDelayedItemsLayout".}
proc fcQHeaderView_protectedbase_executeDelayedItemsLayout(self: pointer, ): void {.importc: "QHeaderView_protectedbase_executeDelayedItemsLayout".}
proc fcQHeaderView_protectedbase_setDirtyRegion(self: pointer, region: pointer): void {.importc: "QHeaderView_protectedbase_setDirtyRegion".}
proc fcQHeaderView_protectedbase_scrollDirtyRegion(self: pointer, dx: cint, dy: cint): void {.importc: "QHeaderView_protectedbase_scrollDirtyRegion".}
proc fcQHeaderView_protectedbase_dirtyRegionOffset(self: pointer, ): pointer {.importc: "QHeaderView_protectedbase_dirtyRegionOffset".}
proc fcQHeaderView_protectedbase_startAutoScroll(self: pointer, ): void {.importc: "QHeaderView_protectedbase_startAutoScroll".}
proc fcQHeaderView_protectedbase_stopAutoScroll(self: pointer, ): void {.importc: "QHeaderView_protectedbase_stopAutoScroll".}
proc fcQHeaderView_protectedbase_doAutoScroll(self: pointer, ): void {.importc: "QHeaderView_protectedbase_doAutoScroll".}
proc fcQHeaderView_protectedbase_dropIndicatorPosition(self: pointer, ): cint {.importc: "QHeaderView_protectedbase_dropIndicatorPosition".}
proc fcQHeaderView_protectedbase_setViewportMargins(self: pointer, left: cint, top: cint, right: cint, bottom: cint): void {.importc: "QHeaderView_protectedbase_setViewportMargins".}
proc fcQHeaderView_protectedbase_viewportMargins(self: pointer, ): pointer {.importc: "QHeaderView_protectedbase_viewportMargins".}
proc fcQHeaderView_protectedbase_drawFrame(self: pointer, param1: pointer): void {.importc: "QHeaderView_protectedbase_drawFrame".}
proc fcQHeaderView_protectedbase_updateMicroFocus(self: pointer, ): void {.importc: "QHeaderView_protectedbase_updateMicroFocus".}
proc fcQHeaderView_protectedbase_create(self: pointer, ): void {.importc: "QHeaderView_protectedbase_create".}
proc fcQHeaderView_protectedbase_destroy(self: pointer, ): void {.importc: "QHeaderView_protectedbase_destroy".}
proc fcQHeaderView_protectedbase_focusNextChild(self: pointer, ): bool {.importc: "QHeaderView_protectedbase_focusNextChild".}
proc fcQHeaderView_protectedbase_focusPreviousChild(self: pointer, ): bool {.importc: "QHeaderView_protectedbase_focusPreviousChild".}
proc fcQHeaderView_protectedbase_sender(self: pointer, ): pointer {.importc: "QHeaderView_protectedbase_sender".}
proc fcQHeaderView_protectedbase_senderSignalIndex(self: pointer, ): cint {.importc: "QHeaderView_protectedbase_senderSignalIndex".}
proc fcQHeaderView_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QHeaderView_protectedbase_receivers".}
proc fcQHeaderView_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QHeaderView_protectedbase_isSignalConnected".}
proc fcQHeaderView_new(vtbl: pointer, orientation: cint): ptr cQHeaderView {.importc: "QHeaderView_new".}
proc fcQHeaderView_new2(vtbl: pointer, orientation: cint, parent: pointer): ptr cQHeaderView {.importc: "QHeaderView_new2".}
proc fcQHeaderView_staticMetaObject(): pointer {.importc: "QHeaderView_staticMetaObject".}
proc fcQHeaderView_delete(self: pointer) {.importc: "QHeaderView_delete".}

proc metaObject*(self: gen_qheaderview_types.QHeaderView, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQHeaderView_metaObject(self.h))

proc metacast*(self: gen_qheaderview_types.QHeaderView, param1: cstring): pointer =
  fcQHeaderView_metacast(self.h, param1)

proc metacall*(self: gen_qheaderview_types.QHeaderView, param1: cint, param2: cint, param3: pointer): cint =
  fcQHeaderView_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qheaderview_types.QHeaderView, s: cstring): string =
  let v_ms = fcQHeaderView_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qheaderview_types.QHeaderView, s: cstring): string =
  let v_ms = fcQHeaderView_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setModel*(self: gen_qheaderview_types.QHeaderView, model: gen_qabstractitemmodel_types.QAbstractItemModel): void =
  fcQHeaderView_setModel(self.h, model.h)

proc orientation*(self: gen_qheaderview_types.QHeaderView, ): cint =
  cint(fcQHeaderView_orientation(self.h))

proc offset*(self: gen_qheaderview_types.QHeaderView, ): cint =
  fcQHeaderView_offset(self.h)

proc length*(self: gen_qheaderview_types.QHeaderView, ): cint =
  fcQHeaderView_length(self.h)

proc sizeHint*(self: gen_qheaderview_types.QHeaderView, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQHeaderView_sizeHint(self.h))

proc setVisible*(self: gen_qheaderview_types.QHeaderView, v: bool): void =
  fcQHeaderView_setVisible(self.h, v)

proc sectionSizeHint*(self: gen_qheaderview_types.QHeaderView, logicalIndex: cint): cint =
  fcQHeaderView_sectionSizeHint(self.h, logicalIndex)

proc visualIndexAt*(self: gen_qheaderview_types.QHeaderView, position: cint): cint =
  fcQHeaderView_visualIndexAt(self.h, position)

proc logicalIndexAt*(self: gen_qheaderview_types.QHeaderView, position: cint): cint =
  fcQHeaderView_logicalIndexAt(self.h, position)

proc logicalIndexAt*(self: gen_qheaderview_types.QHeaderView, x: cint, y: cint): cint =
  fcQHeaderView_logicalIndexAt2(self.h, x, y)

proc logicalIndexAt*(self: gen_qheaderview_types.QHeaderView, pos: gen_qpoint_types.QPoint): cint =
  fcQHeaderView_logicalIndexAtWithPos(self.h, pos.h)

proc sectionSize*(self: gen_qheaderview_types.QHeaderView, logicalIndex: cint): cint =
  fcQHeaderView_sectionSize(self.h, logicalIndex)

proc sectionPosition*(self: gen_qheaderview_types.QHeaderView, logicalIndex: cint): cint =
  fcQHeaderView_sectionPosition(self.h, logicalIndex)

proc sectionViewportPosition*(self: gen_qheaderview_types.QHeaderView, logicalIndex: cint): cint =
  fcQHeaderView_sectionViewportPosition(self.h, logicalIndex)

proc moveSection*(self: gen_qheaderview_types.QHeaderView, fromVal: cint, to: cint): void =
  fcQHeaderView_moveSection(self.h, fromVal, to)

proc swapSections*(self: gen_qheaderview_types.QHeaderView, first: cint, second: cint): void =
  fcQHeaderView_swapSections(self.h, first, second)

proc resizeSection*(self: gen_qheaderview_types.QHeaderView, logicalIndex: cint, size: cint): void =
  fcQHeaderView_resizeSection(self.h, logicalIndex, size)

proc resizeSections*(self: gen_qheaderview_types.QHeaderView, mode: cint): void =
  fcQHeaderView_resizeSections(self.h, cint(mode))

proc isSectionHidden*(self: gen_qheaderview_types.QHeaderView, logicalIndex: cint): bool =
  fcQHeaderView_isSectionHidden(self.h, logicalIndex)

proc setSectionHidden*(self: gen_qheaderview_types.QHeaderView, logicalIndex: cint, hide: bool): void =
  fcQHeaderView_setSectionHidden(self.h, logicalIndex, hide)

proc hiddenSectionCount*(self: gen_qheaderview_types.QHeaderView, ): cint =
  fcQHeaderView_hiddenSectionCount(self.h)

proc hideSection*(self: gen_qheaderview_types.QHeaderView, logicalIndex: cint): void =
  fcQHeaderView_hideSection(self.h, logicalIndex)

proc showSection*(self: gen_qheaderview_types.QHeaderView, logicalIndex: cint): void =
  fcQHeaderView_showSection(self.h, logicalIndex)

proc count*(self: gen_qheaderview_types.QHeaderView, ): cint =
  fcQHeaderView_count(self.h)

proc visualIndex*(self: gen_qheaderview_types.QHeaderView, logicalIndex: cint): cint =
  fcQHeaderView_visualIndex(self.h, logicalIndex)

proc logicalIndex*(self: gen_qheaderview_types.QHeaderView, visualIndex: cint): cint =
  fcQHeaderView_logicalIndex(self.h, visualIndex)

proc setSectionsMovable*(self: gen_qheaderview_types.QHeaderView, movable: bool): void =
  fcQHeaderView_setSectionsMovable(self.h, movable)

proc sectionsMovable*(self: gen_qheaderview_types.QHeaderView, ): bool =
  fcQHeaderView_sectionsMovable(self.h)

proc setFirstSectionMovable*(self: gen_qheaderview_types.QHeaderView, movable: bool): void =
  fcQHeaderView_setFirstSectionMovable(self.h, movable)

proc isFirstSectionMovable*(self: gen_qheaderview_types.QHeaderView, ): bool =
  fcQHeaderView_isFirstSectionMovable(self.h)

proc setSectionsClickable*(self: gen_qheaderview_types.QHeaderView, clickable: bool): void =
  fcQHeaderView_setSectionsClickable(self.h, clickable)

proc sectionsClickable*(self: gen_qheaderview_types.QHeaderView, ): bool =
  fcQHeaderView_sectionsClickable(self.h)

proc setHighlightSections*(self: gen_qheaderview_types.QHeaderView, highlight: bool): void =
  fcQHeaderView_setHighlightSections(self.h, highlight)

proc highlightSections*(self: gen_qheaderview_types.QHeaderView, ): bool =
  fcQHeaderView_highlightSections(self.h)

proc sectionResizeMode*(self: gen_qheaderview_types.QHeaderView, logicalIndex: cint): cint =
  cint(fcQHeaderView_sectionResizeMode(self.h, logicalIndex))

proc setSectionResizeMode*(self: gen_qheaderview_types.QHeaderView, mode: cint): void =
  fcQHeaderView_setSectionResizeMode(self.h, cint(mode))

proc setSectionResizeMode*(self: gen_qheaderview_types.QHeaderView, logicalIndex: cint, mode: cint): void =
  fcQHeaderView_setSectionResizeMode2(self.h, logicalIndex, cint(mode))

proc setResizeContentsPrecision*(self: gen_qheaderview_types.QHeaderView, precision: cint): void =
  fcQHeaderView_setResizeContentsPrecision(self.h, precision)

proc resizeContentsPrecision*(self: gen_qheaderview_types.QHeaderView, ): cint =
  fcQHeaderView_resizeContentsPrecision(self.h)

proc stretchSectionCount*(self: gen_qheaderview_types.QHeaderView, ): cint =
  fcQHeaderView_stretchSectionCount(self.h)

proc setSortIndicatorShown*(self: gen_qheaderview_types.QHeaderView, show: bool): void =
  fcQHeaderView_setSortIndicatorShown(self.h, show)

proc isSortIndicatorShown*(self: gen_qheaderview_types.QHeaderView, ): bool =
  fcQHeaderView_isSortIndicatorShown(self.h)

proc setSortIndicator*(self: gen_qheaderview_types.QHeaderView, logicalIndex: cint, order: cint): void =
  fcQHeaderView_setSortIndicator(self.h, logicalIndex, cint(order))

proc sortIndicatorSection*(self: gen_qheaderview_types.QHeaderView, ): cint =
  fcQHeaderView_sortIndicatorSection(self.h)

proc sortIndicatorOrder*(self: gen_qheaderview_types.QHeaderView, ): cint =
  cint(fcQHeaderView_sortIndicatorOrder(self.h))

proc stretchLastSection*(self: gen_qheaderview_types.QHeaderView, ): bool =
  fcQHeaderView_stretchLastSection(self.h)

proc setStretchLastSection*(self: gen_qheaderview_types.QHeaderView, stretch: bool): void =
  fcQHeaderView_setStretchLastSection(self.h, stretch)

proc cascadingSectionResizes*(self: gen_qheaderview_types.QHeaderView, ): bool =
  fcQHeaderView_cascadingSectionResizes(self.h)

proc setCascadingSectionResizes*(self: gen_qheaderview_types.QHeaderView, enable: bool): void =
  fcQHeaderView_setCascadingSectionResizes(self.h, enable)

proc defaultSectionSize*(self: gen_qheaderview_types.QHeaderView, ): cint =
  fcQHeaderView_defaultSectionSize(self.h)

proc setDefaultSectionSize*(self: gen_qheaderview_types.QHeaderView, size: cint): void =
  fcQHeaderView_setDefaultSectionSize(self.h, size)
